[package]
name = "arithmetic_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio ={ version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"
tfhe_engine = {path = "../tfhe_engine/", version = "0.1.0"}
